@@ -1,4 +1,9 @@
 2008-12-26 Philipp Klaus Krause <pkk AT spth.de>
+	* device/lib/z80/Makefile.in,
+	  device/lib/Makefile.in,
+	  device/lib/z80/memmove.s: Implemented RFE #1914256
+
+2008-12-26 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-z80.def: fixed a bug in peephole 0zf
 	* src/z80/peep.c: improved checks for unused data
